prevent wrapping of text in terminal

--- a/app/styles/_container-terminal.less
+++ b/app/styles/_container-terminal.less
@@ -97,4 +97,5 @@ kubernetes-container-terminal {
   font-family: "Monospace Regular", "DejaVu Sans Mono", Menlo, Monaco, Consolas, monospace;
   font-size: 12px;
   line-height: 1em;
+  white-space: nowrap;
 }
